--- a/mnist_digits_snn/LIF_fi_curve.ipynb
+++ b/mnist_digits_snn/LIF_fi_curve.ipynb
@@ -19,7 +19,7 @@
     "import torch\n",
     "import matplotlib.pyplot as plt\n",
     "from pathlib import Path\n",
-    "import numpy as np"
+    "import numpy as np\n"
    ]
   },
   {
