--- a/mnist_digits_snn/LIF_fi_curve.ipynb
+++ b/mnist_digits_snn/LIF_fi_curve.ipynb
@@ -6332,9 +6332,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:snntorch]",
+   "display_name": "Python [conda env:jh_snntorch]",
    "language": "python",
-   "name": "conda-env-snntorch-py"
+   "name": "conda-env-jh_snntorch-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -6346,7 +6346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
