--- a/mnist_digits_snn/init_snn1.ipynb
+++ b/mnist_digits_snn/init_snn1.ipynb
@@ -387,9 +387,7 @@
    "cell_type": "code",
    "execution_count": 42,
    "id": "55cd962a",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "ename": "ValueError",
@@ -453,9 +451,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:snntorch]",
+   "display_name": "Python [conda env:jh_snntorch]",
    "language": "python",
-   "name": "conda-env-snntorch-py"
+   "name": "conda-env-jh_snntorch-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -467,7 +465,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
