--- a/mnist_digits_snn/optimisation_analysis.ipynb
+++ b/mnist_digits_snn/optimisation_analysis.ipynb
@@ -20,6 +20,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "87c5f4f4-2db0-4de0-92f4-56e5a5916982",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# - investigate in which cases do NaNs appear\n",
+    "# - investigate why does clipping not work"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67d24e07-1c3a-433b-b862-a6ba736156f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO\n",
+    "# - implement full optimisation loop (batching through the whole dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "897eb4c2-d923-4445-b936-edf51d0ae2ae",
    "metadata": {
