supervised training initial

--- a/sensorimotor_coupling_snn/from_allen_running.ipynb
+++ b/sensorimotor_coupling_snn/from_allen_running.ipynb
@@ -341,9 +341,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:allendata]",
+   "display_name": "Python [conda env:jh_allendata]",
    "language": "python",
-   "name": "conda-env-allendata-py"
+   "name": "conda-env-jh_allendata-py"
   },
   "language_info": {
    "codemirror_mode": {
