--- a/deneve_net/brendel_2020_matlab.ipynb
+++ b/deneve_net/brendel_2020_matlab.ipynb
@@ -18,20 +18,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d27707a-6d5a-4c23-aee5-fac881b7b869",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# https://uk.mathworks.com/matlabcentral/answers/456241-how-to-apply-command-line-arguments-in-matlab"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "99ab3eee-fc12-4fbc-afd7-71cbee179613",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Examples of launching https://github.com/ikharitonov/spikes through command line\n",
     "# matlab -nodesktop -r Learning\n",
     "# matlab -nodesktop -sd ~/code/spikes/UnsupervisedLearning -r \"twoDWhite(20,2,0.001,50,0.001,0.0001,0.18,1/0.9,0.02/0.9,0.5,'~/RANCZLAB-NAS/iakov/deneve_net/inputs_coupling_1.mat','~/RANCZLAB-NAS/iakov/deneve_net/outputs_coupling_1.mat'); quit;\""
    ]
@@ -80,7 +71,7 @@
    "id": "a35e9c16-b3f1-4185-98cd-9173172c2f28",
    "metadata": {},
    "source": [
-    "### rate-variable random inputs"
+    "### generating Poisson spiking from a random smooth signal"
    ]
   },
   {
@@ -404,6 +395,7 @@
    },
    "outputs": [],
    "source": [
+    "# Matlab code translated to Python\n",
     "def runnet(dt, lmbda, F, Input, C, Nneuron, Ntime, Thresh):\n",
     "    # Initialize arrays\n",
     "    rO = np.zeros((Nneuron, Ntime))  # filtered spike trains\n",
